--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "chalk": "^2.1.0"
-  },
-  "devDependencies": {
+    "chalk": "^2.1.0",
     "autoprefixer": "^7.1.5",
     "babel-core": "^6.26.0",
     "sw-precache-webpack-plugin": "^0.11.4",
@@ -85,6 +83,9 @@
     "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0",
     "uglify-es": "^3.1.3"
+  },
+  "devDependencies": {
+
   },
   "engines": {
     "node": ">= 4.0.0",
