--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
+    "vuex": "^3.6.2",
     "webpack": "^3.7.1",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-dev-middleware": "^1.12.0",
