--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
+    "bootstrap": "^5.1.3",
     "chai": "^4.1.2",
     "chalk": "^2.1.0",
     "chromedriver": "^2.33.1",
@@ -34,6 +35,7 @@
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
+    "datatables.net-dt": "^1.11.4",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -42,6 +44,7 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
     "inject-loader": "^3.0.1",
+    "jquery": "^3.6.0",
     "karma": "^1.7.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -72,6 +75,9 @@
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
+    "vuejs-datatable": "^2.0.0-alpha.7",
+    "vuejs-smart-table": "^0.0.8",
+    "vuetify": "^2.6.3",
     "vuex": "^3.6.2",
     "webpack": "^3.7.1",
     "webpack-bundle-analyzer": "^3.8.0",
